--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -1,20 +1,17 @@
 # Use the official Node.js image
-FROM node:14
+FROM node:20-alpine
 
 # Set the working directory
-WORKDIR /usr/src/app
+WORKDIR /app
 
 # Copy package.json and package-lock.json
-COPY package*.json ./
+COPY ./package*.json ./
 
 # Install dependencies
 RUN npm install
-
-# Copy the rest of the application code
-COPY . .
 
 # Expose the application port
 EXPOSE 3000
 
 # Command to run the application
-CMD ["npm", "start"]
+CMD [ "npm", "start" ]
